--- a/index.html
+++ b/index.html
@@ -161,6 +161,6 @@
         </div>
     </footer>
 
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
