--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
         <ul class="meals-showcase clearfix">
             <li>
                 <figure class="meal-photo">
-                    <img src="/assets/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                    <img src="assets/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
                 </figure>
             </li>
             <li>
                 <figure class="meal-photo">
-                    <img src="/assets/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                    <img src="assets/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
                 </figure>
             </li>
             <li>
                 <figure class="meal-photo">
-                    <img src="/assets/img/3.jpg" alt="Chicken breast steak with vegetables">
+                    <img src="assets/img/3.jpg" alt="Chicken breast steak with vegetables">
                 </figure>
             </li>
             <li>
                 <figure class="meal-photo">
-                    <img src="/assets/img/4.jpg" alt="Autumn pumpkin soup">
+                    <img src="assets/img/4.jpg" alt="Autumn pumpkin soup">
                 </figure>
             </li>
         </ul>
