--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Melp Test App">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <link rel="stylesheet" type="text/css" href="assets/css/grids.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
     <script src="https://kit.fontawesome.com/fd94f68af1.js" crossorigin="anonymous"></script>
     <title>MELP: Best Restaurants</title>
 </head>
@@ -14,17 +15,18 @@
         <nav>
             <div class="row">
                 <img src="assets/img/logo-l.png" alt="MELP Logo" class="logo">
-                <ul class="main-nav">
+                <ul class="main-nav js--main-nav">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#features">Features</a></li>
                     <li><a href="#best">The Best</a></li>
                     <li><a href="#nearu">Near You</a></li>
                     <li><a href="#about">About Us</a></li>
                 </ul>
+                <a class="mobile-nav-icon js--nav-icon"><span><i class="fas fa-bars"></i></span></span></a>
             </div>
         </nav>
-        <div class="text-box">
-            <h1>WITH MELP,<br> Say Hello to the best restaurants near you!</h1>
+        <div class="hero-text-box">
+            <h1>Say Hello<br>to the best restaurants near you!</h1>
             <button class="btn-full" href="#">Select A Restaurant!</button>
             <button class="btn-ghost" href="#">Need More Info?</button>
         </div>
@@ -161,6 +163,6 @@
         </div>
     </footer>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </body>
 </html>
