--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <link rel="stylesheet" type="text/css" href="assets/css/grids.css">
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
     <script src="https://kit.fontawesome.com/fd94f68af1.js" crossorigin="anonymous"></script>
     <title>MELP: Best Restaurants</title>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v8.0" nonce="u7mScFdp"></script>
     <header id="home">
         <nav>
             <div class="row">
