--- a/index.html
+++ b/index.html
@@ -136,11 +136,36 @@
         <hr>
     </section>
 
+    <section class="section-meals">
+        <ul class="meals-showcase clearfix">
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/img/5.jpg" alt="Paleo beef steak with vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/img/7.jpg" alt="Burger with cheddar and bacon">
+                </figure>
+            </li>
+            <li>
+                <figure class="meal-photo">
+                    <img src="assets/img/8.jpg" alt="Granola with cherries and strawberries">
+                </figure>
+            </li>
+        </ul>
+    </section>
+
     <section class="map-box">
-        <div class="map"></div>
         <div class="form-box">
             <h3>TAKE A LOOK ON THE MAP!</h3>
         </div>
+        <div id="map"></div>
     </section>
     <footer id="about">
         <div class="row">
